cmake_minimum_required(VERSION 3.24)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(C main.c)

add_executable(main main.c)
add_executable(lecture lecture.c)
add_executable(Study Study.c)
add_executable(StringArray StringArray.c)
add_executable(11.6 11.6.c)
add_executable(11.7 11.7.c)
add_executable(11.8 11.8.c)
add_executable(11.9 11.9.c)
add_executable(11.10 11.10.c)
add_executable(11.11 11.11.c)
add_executable(12.3 12.3.c)
add_executable(12.3LinkageSecond 12.3LinkageSecond.c)
add_executable(12.3Duration 12.3Duration.c)
add_executable(12.5 12.5.c)
add_executable(12.3Linkage 12.3Linkage.c 12.3LinkageSecond.c)
add_executable(12.6 12.6.c)
add_executable(12.8 12.8StaticExternalLinkage.c 12.8StaticExternalLinkage2.c)
add_executable(12.9 12.9StaticInternalLinkage.c 12.9StaticInternalLinakge2.c 12.9StaticInternalLinkage3.c)
add_executable(12.12RandomNumberCreator 12.12RandomNumberCreator.c)
add_executable(12.12 12.12CustomRandomNumberCreator.c 12.12CustomRandomNumberCreator.h 12.12RandomNumberCreator.c)
add_executable(12.13DynamicMemoryAllocation 12.13DynamicMemoryAllocation.c)